-----------------------------------------------------------------------
*** libkvutils - changes and additions to the public interfaces     ***
-----------------------------------------------------------------------

2001-11-29  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* message_item.h (<<operator): added overloaded versions
	for handling (un)signed long long ints
	* kvu_numtostr.h (kvu_numtostr): added overloaded versions
	for handling (un)signed long long ints
	
2001-10-15  Kai Vehmanen <kai.vehmanen@wakkanet.fi>	

	* procudure_timer.h (set_upper_bound_seconds,
	set_lower_bound_seconds): added
	
2001-10-09  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* locks.h (all): made function member of ATOMIC_INTEGER 
	non-inlined to better hide the actual implementation
	
2001-10-03  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* dbc.h (DBC_DECLARE): added
	* kvurtcaps.h (all): added
	
2001-08-19  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version changed to 3:0:1
	* dbc.h (all): added, makes definition_by_contract.h obsolete
	
2001-04-27  Kai Vehmanen <kaiv@wakkanet.fi>

	* library version 2:0:0 frozen
	
2001-04-23  Kai Vehmanen <kaiv@wakkanet.fi>	
	
	* kvutils.h (string_to_int_vector): added
	
2001-03-22  Kai Vehmanen <kaiv@wakkanet.fi>
	
	* temporary_file_directory.h (all): added
	
2001-02-19  Kai Vehmanen <kaiv@wakkanet.fi>

	* value_queue.h (poll): added
		
2000-11-18  Kai Vehmanen <kaiv@wakkanet.fi>	

	* procedure_timer.h (all): added
	
2000-11-16  Kai Vehmanen <kaiv@wakkanet.fi>	

	* locks.h (read): renamed to 'get'
	* locks.h (write): renamed to 'set'
	* locks.h (add, subtract, increment, decrement): added
	
2000-10-17  Kai Vehmanen <kaiv@wakkanet.fi>	

	* object_queue.h (all): few member functions renamed, pthread
	locking changes
	* command_queue.h (all): removed as obsolete
	* locks.h (pthread_mutex_spinlock): added
	
2000-09-30  Kai Vehmanen <kaiv@wakkanet.fi>	

	* definition_by_contract.h (all): lots of changes in the public
	interface